...
                        android:id="@+id/pubLogoBack"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/logo_collapsed_height"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/pubLogo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/logo_collapsed_height"
                        android:padding="10dp"
                        android:scaleType="fitCenter" />

                    <ProgressBar
...
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/headCard" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/pubDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/pubContacts"
...
